# slugkit-py-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md  README_MCP.md  WARP.md  docker-compose.yaml  pyproject.toml
docker/: mcp.dockerfile
src/slugkit/: __init__.py  async_client.py  base.py  cli.py  errors.py  package_data.py  sync_client.py
src/slugkit/data/: dictionary-and-tag-reference.md  pattern-examples.md  pattern-grammar.ebnf  pattern-syntax-reference.md  quick-start-guilde.md
src/slugkit/mcp/: server.py
tests/: __init__.py  conftest.py  test_async_client.py  test_cli.py  test_enhanced_error_handling.py  test_mcp_server.py  test_retry_logic.py  test_sync_client.py
