[project]
name = "slugkit-py-sdk"
version = "0.0.1"
description = "SlugKit Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "twine>=5.0.0",
    "wheel>=0.41.2",
    "hatchling>=1.18.0",
]



[project.urls]
Homepage = "https://github.com/ai-proxy/slugkit-py-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slugkit"]

[tool.uv.sources]
slugkit = { workspace = true }

[tool.uv]
package = true

[project.scripts]
slugkit = "slugkit.cli:main"

[tool.distutils]
index-servers = ["pypi", "testpypi"]
