[project]
name = "slugkit-py-sdk"
version = "0.0.4"
authors = [
    { name = "Sergei Fedorov", email = "sergei@slugkit.dev" },
]
description = "SlugKit Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-file = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "typer>=0.16.0",
    "pydantic>=2.7.0",
    "mcp>=1.6.0",   
]

[dependency-groups]
dev = [
    "twine>=5.0.0",
    "wheel>=0.41.2",
    "hatchling>=1.18.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://dev.slugkit.dev"
Issues = "https://github.com/slugkit/slugkit-py-sdk/issues"
Source = "https://github.com/slugkit/slugkit-py-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slugkit"]

[tool.uv.sources]
slugkit = { workspace = true }

[tool.uv]
package = true

[project.scripts]
slugkit = "slugkit.cli:main"
slugkit-mcp = "slugkit.mcp.server:main"

[tool.distutils]
index-servers = ["pypi", "testpypi"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
